<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="gui">Look at my GUI</string>
    <string name="Button">Click here</string>
    <string name="check">Check this out!</string>
    <string name="switch_on">Switch on / off</string>
    <string name="type">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="cb_messageOn">Check</string>
    <string name="cb_messageOff">Check this out</string>
    <string name="sw_messageOn">The switch is on</string>
    <string name="sw_messageOff">The switch is off</string>
    <string name="profile">Your Profile</string>
    <string name="name">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_email">Enter your email</string>
    <string name="pic">Your picture:</string>
    <string name="take_pic">Click the button above to take a picture</string>
    <string name="type_email">Type email here</string>
    <string name="enter_emailAdd">Enter your email address:</string>
    <string name="type_pass">Type your password</string>
    <string name="login">LOGIN</string>
    <string name="goChat">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
</resources>