<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:rowCount="4" android:columnCount="2"
    android:layout_weight="1" android:layout_gravity="fill">

    <TextView
        android:layout_gravity="fill"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:text="@string/gui"
        android:textSize="30dp" />

    <Button
        android:id="@+id/bu"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/Button"
        android:onClick="send"/>

    <CheckBox
        android:id="@+id/cb"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/check"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:text="@string/switch_on"/>

    <EditText
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="top"
        android:hint="@string/type"
        android:inputType="textPersonName"/>

</GridLayout>