<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gui"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Button"
            android:layout_weight="1"
            android:onClick="send"/>

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_weight="1"
            android:onClick="send"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/sw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/switch_on"
            android:layout_weight="1"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:inputType="textPersonName"/>

</LinearLayout>